replace collect(Collectors.toList()) with toList()